--- a/PortofolioKazhuro/appsettings.json
+++ b/PortofolioKazhuro/appsettings.json
@@ -7,8 +7,8 @@
   },
 
   "AllowedHosts": "*",
-   "ConnectionStrings": {
-     "LogDb": "Data Source=log.db;"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=portfolio.db"
+  }
   
 }
