--- a/PortofolioKazhuro/PortofolioKazhuro.csproj
+++ b/PortofolioKazhuro/PortofolioKazhuro.csproj
@@ -30,5 +30,15 @@
     <PackageReference Include="Serilog.Sinks.SQLite" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DB\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DB\portfolio.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
